// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Prometheus counter 1`] = `
"# HELP counter counter
# TYPE counter counter
counter 1

# HELP gauge gauge
# TYPE gauge gauge
gauge 0

# HELP summary summary
# TYPE summary summary
summary{quantile=\\"0.01\\"} 0
summary{quantile=\\"0.05\\"} 0
summary{quantile=\\"0.5\\"} 0
summary{quantile=\\"0.9\\"} 0
summary{quantile=\\"0.95\\"} 0
summary{quantile=\\"0.99\\"} 0
summary{quantile=\\"0.999\\"} 0
summary_sum 0
summary_count 0

# HELP histogram histogram
# TYPE histogram histogram
histogram_bucket{le=\\"0.005\\"} 0
histogram_bucket{le=\\"0.01\\"} 0
histogram_bucket{le=\\"0.025\\"} 0
histogram_bucket{le=\\"0.05\\"} 0
histogram_bucket{le=\\"0.1\\"} 0
histogram_bucket{le=\\"0.25\\"} 0
histogram_bucket{le=\\"0.5\\"} 0
histogram_bucket{le=\\"1\\"} 0
histogram_bucket{le=\\"2.5\\"} 0
histogram_bucket{le=\\"5\\"} 0
histogram_bucket{le=\\"10\\"} 0
histogram_bucket{le=\\"+Inf\\"} 0
histogram_sum 0
histogram_count 0
"
`;

exports[`Prometheus gauge 1`] = `
"# HELP counter counter
# TYPE counter counter
counter 1

# HELP gauge gauge
# TYPE gauge gauge
gauge 1

# HELP summary summary
# TYPE summary summary
summary{quantile=\\"0.01\\"} 0
summary{quantile=\\"0.05\\"} 0
summary{quantile=\\"0.5\\"} 0
summary{quantile=\\"0.9\\"} 0
summary{quantile=\\"0.95\\"} 0
summary{quantile=\\"0.99\\"} 0
summary{quantile=\\"0.999\\"} 0
summary_sum 0
summary_count 0

# HELP histogram histogram
# TYPE histogram histogram
histogram_bucket{le=\\"0.005\\"} 0
histogram_bucket{le=\\"0.01\\"} 0
histogram_bucket{le=\\"0.025\\"} 0
histogram_bucket{le=\\"0.05\\"} 0
histogram_bucket{le=\\"0.1\\"} 0
histogram_bucket{le=\\"0.25\\"} 0
histogram_bucket{le=\\"0.5\\"} 0
histogram_bucket{le=\\"1\\"} 0
histogram_bucket{le=\\"2.5\\"} 0
histogram_bucket{le=\\"5\\"} 0
histogram_bucket{le=\\"10\\"} 0
histogram_bucket{le=\\"+Inf\\"} 0
histogram_sum 0
histogram_count 0
"
`;

exports[`Prometheus histogram 1`] = `
"# HELP counter counter
# TYPE counter counter
counter 1

# HELP gauge gauge
# TYPE gauge gauge
gauge 1

# HELP summary summary
# TYPE summary summary
summary{quantile=\\"0.01\\"} 1
summary{quantile=\\"0.05\\"} 1
summary{quantile=\\"0.5\\"} 1
summary{quantile=\\"0.9\\"} 1
summary{quantile=\\"0.95\\"} 1
summary{quantile=\\"0.99\\"} 1
summary{quantile=\\"0.999\\"} 1
summary_sum 1
summary_count 1

# HELP histogram histogram
# TYPE histogram histogram
histogram_bucket{le=\\"0.005\\"} 0
histogram_bucket{le=\\"0.01\\"} 0
histogram_bucket{le=\\"0.025\\"} 0
histogram_bucket{le=\\"0.05\\"} 0
histogram_bucket{le=\\"0.1\\"} 0
histogram_bucket{le=\\"0.25\\"} 0
histogram_bucket{le=\\"0.5\\"} 0
histogram_bucket{le=\\"1\\"} 1
histogram_bucket{le=\\"2.5\\"} 1
histogram_bucket{le=\\"5\\"} 1
histogram_bucket{le=\\"10\\"} 1
histogram_bucket{le=\\"+Inf\\"} 1
histogram_sum 1
histogram_count 1
"
`;

exports[`Prometheus summary 1`] = `
"# HELP counter counter
# TYPE counter counter
counter 1

# HELP gauge gauge
# TYPE gauge gauge
gauge 1

# HELP summary summary
# TYPE summary summary
summary{quantile=\\"0.01\\"} 1
summary{quantile=\\"0.05\\"} 1
summary{quantile=\\"0.5\\"} 1
summary{quantile=\\"0.9\\"} 1
summary{quantile=\\"0.95\\"} 1
summary{quantile=\\"0.99\\"} 1
summary{quantile=\\"0.999\\"} 1
summary_sum 1
summary_count 1

# HELP histogram histogram
# TYPE histogram histogram
histogram_bucket{le=\\"0.005\\"} 0
histogram_bucket{le=\\"0.01\\"} 0
histogram_bucket{le=\\"0.025\\"} 0
histogram_bucket{le=\\"0.05\\"} 0
histogram_bucket{le=\\"0.1\\"} 0
histogram_bucket{le=\\"0.25\\"} 0
histogram_bucket{le=\\"0.5\\"} 0
histogram_bucket{le=\\"1\\"} 0
histogram_bucket{le=\\"2.5\\"} 0
histogram_bucket{le=\\"5\\"} 0
histogram_bucket{le=\\"10\\"} 0
histogram_bucket{le=\\"+Inf\\"} 0
histogram_sum 0
histogram_count 0
"
`;
